--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,7 @@
 .footer,
 .footer-box {
   width: 100%;
+  height: 300px;
   margin-top: auto;
   display: flex;
   flex-direction: column;
@@ -14,7 +15,9 @@
 }
 .footer-para {
   font-size: 16px;
-  line-height: 1.5rem;
+  font-weight: 400;
+  /* line-height: 1.5rem; */
+  line-height: 32px;
 }
 .social-icons-box {
   display: flex;
@@ -31,25 +34,27 @@
   transition: all 0.3s 0s ease-in-out;
 }
 .social-icons-box > a:hover {
-  transform: scale(1.1) translateY(-2px);
+  transform: scale(1.15) translateY(-2px);
 }
 .social-icons-box > a::after {
   content: '';
-  width: 100%;
+  width: 110%;
   margin: auto;
   height: 0px;
   position: absolute;
   bottom: 0px;
   right: 0;
   z-index: -1;
-  background: linear-gradient(to top, steelblue, transparent 50%);
-  transition: all 0.3s 0s ease-in-out, background 0.5s 0s ease;
+  background: linear-gradient(to top, #088c03, transparent 50%);
+  transition:
+    all 0.3s 0s ease-in-out,
+    background 0.5s 0s ease;
 }
 .social-icons-box > a:hover::after {
   height: 30px;
 }
 .footer-copyright {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 400;
   text-align: center;
   margin: 0;
@@ -59,5 +64,8 @@
   .footer,
   .footer * {
     display: none;
+    visibility: hidden;
+    width: 0;
+    font-size: 0;
   }
 }
